# transformers

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
src/transformer/: test.ipynb  train.py  transformer.py  utils.py
src/transformer/language/: base_model.py  data.py  gpt.ipynb
src/transformer/vision/: base_model.py  cifar.ipynb  data.py  resnet.py  vgg.py  vit.py
src/transformers/: train.py  transformer.py  utils.py
src/transformers/language/: base_model.py  gpt.ipynb
src/transformers/vision/: base_model.py  cifar.ipynb  data.py  resnet.py  vgg.py  vit.py
src/transformers/vision/_out/: train-state.json
